Specialize root task state